# PyDistSim

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  LICENSE.txt  README.rst  pyproject.toml  requirements-dev.txt  requirements-gui.txt  requirements.dev.txt  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: reporte-de-bugs-de-la-aplicación.md  reporte-de-bugs-en-la-documentación.md
.github/workflows/: python-publish.yml
docs/: Makefile  conf.py  index.rst  make.bat  pymote.bat  readthedocs.py  requirements.txt
docs/_templates/: custom-class-template.rst
docs/developer/: doc.rst  index.rst  objects_numpy.inv  objects_scipy.inv  running-tests.rst  setting-up-environment.rst
docs/install/: installation.rst  starting.rst  windows_virtualenv.rst
docs/models/: basic_centralized.rst  index.rst  santoro_msg_passing.rst
docs/notebooks/: animation.ipynb  behavior_viz.ipynb  benchmarking.ipynb  custom_observer.ipynb  gen.ipynb  hello_distributed_world.ipynb  network_generators.ipynb  prueba.ipynb  tree_construction_viz.ipynb
docs/notebooks/mega_merger/: animations.ipynb  benchmarking.ipynb  tests.ipynb
docs/reference/: conf.rst  index.rst  logging.rst  modules.rst  networkbehavior.rst  networkgenerator.rst  networkmixin.rst  nodealgorithm.rst  observers.rst  rangenetwork.rst  sensors.rst  simulation.rst
docs/static/notebooks/: Pymote uvod.ipynb  hello_distributed_world.ipynb  prueba.ipynb
docs/tutorials/: hello_distributed_world.rst  implementing.rst  index.rst  networkgenerator.rst  restrictions.rst
pydistsim/: __init__.py  algorithm.py  benchmark.py  channeltype.py  environment.py  exceptions.py  logger.py  message.py  metrics.py  network.py  networkgenerator.py  node.py  npickle.py  observers.py  sensor.py  simulation.py
pydistsim/algorithm/: __init__.py  base_algorithm.py  network_algorithm.py  node_algorithm.py  node_wrapper.py
pydistsim/algorithms/: broadcast.py
pydistsim/algorithms/niculescu2003/: dvhop.py  floodingupdate.py  trilaterate.py
pydistsim/algorithms/santoro2007/: santoro2007.ipynb  traversal.py  yoyo.py
pydistsim/algorithms/tests/: test_broadcast.py  test_niculescu2003.py  test_santoro2007.py
pydistsim/conf/: __init__.py  global_settings.py
pydistsim/demo_algorithms/: broadcast.py
pydistsim/demo_algorithms/niculescu2003/: dvhop.py  floodingupdate.py  trilaterate.py
pydistsim/demo_algorithms/santoro2007/: santoro2007.ipynb  traversal.py  yoyo.py
pydistsim/demo_algorithms/santoro2007/mega_merger/: algorithm.py
pydistsim/demo_algorithms/tests/: test_broadcast.py  test_niculescu2003.py  test_santoro2007.py
pydistsim/gui/: __main__.py  drawing.py  icons.qrc  icons_rc.py  qtreeview_example.py  simulation.ui  simulationgui.py
pydistsim/network/: __init__.py  behavior.py  communicationproperties.py  environment.py  exceptions.py  generator.py  network.py  node.py  rangenetwork.py  sensor.py
pydistsim/restrictions/: __init__.py  axioms.py  base.py  base_restriction.py  communication.py  comunication.py  knowledge.py  reliability.py  time.py  topological.py
pydistsim/tests/: test_algorithm.py  test_algorithm_communicate.py  test_benchmark.py  test_metrics.py  test_network.py  test_networkgenerator.py  test_npickle.py  test_observers.py  test_restrictions.py  test_sensor.py  test_simulation.py  test_stitchers.py  test_utils_tree.py
pydistsim/utils/: helpers.py  tree.py  visualization.py
pydistsim/utils/localization/: aoastitcher.py  basestitcher.py  helpers.py
pymote/: __init__.py  algorithm.py  channeltype.py  environment.py  logger.py  message.py  network.py  networkgenerator.py  node.py  npickle.py  release.py  restrictions.py  sensor.py  simulation.py
pymote/algorithms/: broadcast.py  ideal_broadcast_definition.py  readsensors.py
pymote/algorithms/niculescu2003/: dvhop.py  floodingupdate.py  trilaterate.py
pymote/algorithms/niculescu2003/tests/: test_niculescu2003.py
pymote/algorithms/santoro2007/: santoro2007.ipynb  traversal.py  yoyo.py
pymote/algorithms/santoro2007/tests/: test_santoro2007.py
pymote/algorithms/tests/: test_broadcast.py  test_niculescu2003.py  test_santoro2007.py
pymote/conf/: __init__.py  global_settings.py
pymote/conf/ipython/: ipython_config.py  ipython_notebook_config.py
pymote/gui/: __init__.py  dictionarytreemodel.py  icons_rc.py  qtreeview_example.py  simulation.ui.py  simulationgui.py  simulationui.bat  simulationui.py
pymote/scripts/: ipymote.py
pymote/tests/: test_algorithm.py  test_network.py  test_networkgenerator.py  test_npickle.py  test_sensor.py  test_simulation.py  test_stitchers.py  test_utils_tree.py
pymote/utils/: helpers.py  tree.py  visualization.py
pymote/utils/localization/: aoastitcher.py  basestitcher.py  diststitcher.py  helpers.py  stitchsubclusterselectors.py
pymote/utils/memory/: __init__.py  positions.py
